kube.yaml
##########
# Postgres
##########
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - image: postgres:9.5
        name: postgres
        resources: {}
        ports:
          - containerPort: 5432
---
kind: Service
apiVersion: v1
metadata:
  name: pg-service
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
---
###############
# Yesod backend
###############
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: yesod
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: yesod
    spec:
      containers:
      - image: us.gcr.io/emp-pl-site/yesod@sha256:eae06bd164cf42f7274f39c76c475bd869365ffac6fcc748608826d655b64425
        name: yesod
        ports:
          - containerPort: 3000
        volumeMounts:
          - name: config-volume
            mountPath: /etc/config
      volumes:
        - name: config-volume
          configMap:
            name: ip-block
---
kind: Service
apiVersion: v1
metadata:
  name: yesod-service
spec:
  type: NodePort
  selector:
    app: yesod
  ports:
    - port: 3000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-lego
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-lego
    spec:
      containers:
      - name: kube-lego
        image: jetstack/kube-lego:0.1.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "50m"
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 1
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: emp-pl-site
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - goodcode.cc
    secretName: emp-pl-site-tls
  rules:
  - host: goodcode.cc
    http:
      paths:
      - path: "/*"
        backend:
          serviceName: yesod-service
          servicePort: 3000
